# eau2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.txt  connect.sh  default_config.txt  linus_out.txt  unzip.sh  zip.sh
data/: data.sor  generate.py  generated_commits.txt  generated_commits2.txt  generated_projects.txt  generated_users.txt  linus_generator.py  test.sor  word_count.txt
milestones/: milestone5_config.txt  milestone_2.cpp  milestone_3.cpp  milestone_4.cpp  milestone_5.cpp
report/: doc.md
src/: application.h  array.h  column.h  dataframe.h  generate.py  helper.h  keyvalue.h  keyvaluestore.h  map.h  modified_dataframe.h  network.h  object.h  row.h  schema.h  serial.h  server.cpp  sorer.h  string.h  vector.h
src/application/: application.h  milestone_2.h  milestone_3.h  milestone_4.h  milestone_5.h
src/dataframe/: column.h  dataframe.h  reader_writer.h  (+3 more)
tests/: CMakeLists.txt  CMakeLists.txt.in  client.cpp  kvstore.cpp  milestone3.cpp  milestone_2.cpp  milestone_3.cpp  milestone_4.cpp  milestone_5.cpp  personal_test_column.h  personal_test_dataframe.h  personal_test_macros.h  personal_test_row.h  personal_test_schema.h  server.cpp  test_column.h  test_dataframe.h  test_keyvalue.h  test_kvstore.h  test_macros.h  test_map.cpp  test_map.h  test_row.h  test_schema.h  test_sorer.cpp  test_sorer.h  test_suite.cpp  test_suite_dataframe.cpp  valgrind.cpp
tests/unit_tests/: config.txt  test_column.h  test_dataframe.h  test_keyvalue.h  test_kvstore.h  test_linus.h  test_map.h  test_row.h  test_schema.h  test_sorer.h  test_suite.cpp
(+15 files in other folders)
